--- a/TradeHubGui/TradeHubGui.csproj
+++ b/TradeHubGui/TradeHubGui.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Common\DataGridRowDoubleClickHandler.cs" />
     <Compile Include="Common\RelayCommand.cs" />
     <Compile Include="Common\UIHelper.cs" />
+    <Compile Include="Converters\InstanceExecutionStateToBrushConverter.cs" />
     <Compile Include="TemplateSelectors\ParameterDetailsTemplateSelector.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\StrategyRunnerViewModel.cs" />
@@ -226,9 +227,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Converters\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\TradeHubGui.Common\TradeHubGui.Common.csproj">
       <Project>{5e5a9a79-0b0c-428b-8385-015134b42d86}</Project>
