Added DashboardViewModel, Instrument model, Flayouts for API configs and some small changes

--- a/TradeHubGui.Common/TradeHubGui.Common.csproj
+++ b/TradeHubGui.Common/TradeHubGui.Common.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\ExecutionDetails.cs" />
+    <Compile Include="Models\Instrument.cs" />
     <Compile Include="Models\OrderDetails.cs" />
     <Compile Include="Models\Strategy.cs" />
     <Compile Include="Models\StrategyInstance.cs" />
