(TH-144) Code changes to update executions for strategy instance. (TH-144) GA optimization initial code added. (TH-145) Code modifications to update instance parameters.

--- a/TradeHubGui.Common/TradeHubGui.Common.csproj
+++ b/TradeHubGui.Common/TradeHubGui.Common.csproj
@@ -68,6 +68,7 @@
     <Compile Include="EventSystem.cs" />
     <Compile Include="Models\ExecutionDetails.cs" />
     <Compile Include="Models\Instrument.cs" />
+    <Compile Include="Models\OptimizationStatistics.cs" />
     <Compile Include="Models\OrderDetails.cs" />
     <Compile Include="Models\Strategy.cs" />
     <Compile Include="Models\StrategyInstance.cs" />
