--- a/TradeHubGui.StrategyRunner/TradeHubGui.StrategyRunner.csproj
+++ b/TradeHubGui.StrategyRunner/TradeHubGui.StrategyRunner.csproj
@@ -30,6 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AForge">
+      <HintPath>..\packages\AForge.2.2.5\lib\AForge.dll</HintPath>
+    </Reference>
+    <Reference Include="AForge.Genetic">
+      <HintPath>..\Lib\helper\Custom Aforge\AForge.Genetic.dll</HintPath>
+    </Reference>
+    <Reference Include="AForge.Math">
+      <HintPath>..\packages\AForge.Math.2.2.5\lib\AForge.Math.dll</HintPath>
+    </Reference>
     <Reference Include="Atomic">
       <HintPath>..\Lib\helper\Disruptor.1.1.0\lib\net40\Atomic.dll</HintPath>
     </Reference>
@@ -70,7 +79,8 @@
     <Reference Include="TraceSourceLogger">
       <HintPath>..\Lib\helper\TraceSourceLogger.2.1.1.1\lib\net40\TraceSourceLogger.dll</HintPath>
     </Reference>
-    <Reference Include="TradeHub.Common.Core">
+    <Reference Include="TradeHub.Common.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\tradehub\TradeHub.Common.Core.dll</HintPath>
     </Reference>
     <Reference Include="TradeHub.Common.HistoricalDataProvider">
@@ -108,11 +118,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Executors\StrategyExecutorGeneticAlgorithm.cs" />
+    <Compile Include="Managers\OptimizationManagerGeneticAlgorithm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Representations\ExecutionRepresentation.cs" />
     <Compile Include="Representations\StrategyStatusRepresentation.cs" />
     <Compile Include="Services\StrategyController.cs" />
-    <Compile Include="Services\StrategyExecutor.cs" />
+    <Compile Include="Executors\StrategyExecutor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TradeHubGui.Common\TradeHubGui.Common.csproj">
