--- a/TradeHubGui.StrategyRunner/packages.config
+++ b/TradeHubGui.StrategyRunner/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net45" />
+  <package id="AForge.Math" version="2.2.5" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
   <package id="Prism" version="5.0.0" targetFramework="net45" />
   <package id="Prism.Composition" version="5.0.0" targetFramework="net45" />
