--- a/TradeHubGui.Common/TradeHubGui.Common.csproj
+++ b/TradeHubGui.Common/TradeHubGui.Common.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="EventSystem.cs" />
     <Compile Include="Models\ExecutionDetails.cs" />
+    <Compile Include="Models\GeneticAlgorithmResult.cs" />
     <Compile Include="Models\Instrument.cs" />
     <Compile Include="Models\OptimizationStatistics.cs" />
     <Compile Include="Models\OrderDetails.cs" />
@@ -78,6 +79,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\FileReader.cs" />
     <Compile Include="Utility\StrategyIdGenerator.cs" />
+    <Compile Include="ValueObjects\OptimizationParameterDetail.cs" />
+    <Compile Include="Models\GeneticAlgorithmParameters.cs" />
     <Compile Include="ValueObjects\ParameterDetail.cs" />
     <Compile Include="ValueObjects\StrategyInstanceStatus.cs" />
   </ItemGroup>
