(TH-149) Code changes to solve wrong no of Rounds executed bug in GA. (TH-150) Changes to use edited parameters for instances. (TH-151) Strategy name displayed. Color indicator for GA execution status. (TH-152) Initial coding additions to for Brute Force Optimization.

--- a/TradeHubGui.StrategyRunner/TradeHubGui.StrategyRunner.csproj
+++ b/TradeHubGui.StrategyRunner/TradeHubGui.StrategyRunner.csproj
@@ -141,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Executors\StrategyExecutorGeneticAlgorithm.cs" />
+    <Compile Include="Managers\OptimizationManagerBruteForce.cs" />
     <Compile Include="Managers\OptimizationManagerGeneticAlgorithm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Representations\ExecutionRepresentation.cs" />
