--- a/TradeHubGui.Common/TradeHubGui.Common.csproj
+++ b/TradeHubGui.Common/TradeHubGui.Common.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <Compile Include="Constants\OptimizationStatus.cs" />
     <Compile Include="EventSystem.cs" />
+    <Compile Include="Models\BruteForceParameters.cs" />
     <Compile Include="Models\ExecutionDetails.cs" />
     <Compile Include="Models\GeneticAlgorithmResult.cs" />
     <Compile Include="Models\Instrument.cs" />
@@ -83,6 +84,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\FileReader.cs" />
     <Compile Include="Utility\StrategyIdGenerator.cs" />
+    <Compile Include="ValueObjects\BruteForceParameterDetail.cs" />
     <Compile Include="ValueObjects\OptimizationParameterDetail.cs" />
     <Compile Include="Models\GeneticAlgorithmParameters.cs" />
     <Compile Include="ValueObjects\ParameterDetail.cs" />
