--- a/TradeHubGui.StrategyRunner/TradeHubGui.StrategyRunner.csproj
+++ b/TradeHubGui.StrategyRunner/TradeHubGui.StrategyRunner.csproj
@@ -158,6 +158,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="SpringConfig\BacktestingOrderExecutorConfig.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
