--- a/TradeHubGui/App.config
+++ b/TradeHubGui/App.config
@@ -16,6 +16,7 @@
       <resource uri="~/TradeHubConfig/MarketDataServiceSpringConfig.xml" />
       <resource uri="~/TradeHubConfig/HistoricalDataServiceSpringConfig.xml" />
       <resource uri="~/TradeHubConfig/OrderExecutionServiceSpringConfig.xml" />
+      <resource uri="~/SpringConfig/BacktestingOrderExecutorConfig.xml" />
       <resource uri="~/TradeHubConfig/SpringDao.xml" />
     </context>
   </spring>
