--- a/TradeHubGui.Dashboard/TradeHubGui.Dashboard.csproj
+++ b/TradeHubGui.Dashboard/TradeHubGui.Dashboard.csproj
@@ -87,7 +87,9 @@
     <Content Include="libzmq.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="SpringConfig\MarketDataControllerSpringConfig.xml" />
+    <Content Include="SpringConfig\MarketDataControllerSpringConfig.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
