--- a/TradeHubGui/App.config
+++ b/TradeHubGui/App.config
@@ -11,13 +11,14 @@
   </configSections>
   <spring>
     <context>
-      <resource uri="~/TradeHubConfig/MDEClientSpringConfig.xml"/>
-      <resource uri="~/TradeHubConfig/OEEClientSpringConfig.xml"/>
-      <resource uri="~/TradeHubConfig/MarketDataServiceSpringConfig.xml" />
-      <resource uri="~/TradeHubConfig/HistoricalDataServiceSpringConfig.xml" />
-      <resource uri="~/TradeHubConfig/OrderExecutionServiceSpringConfig.xml" />
+      <resource uri="~/SpringConfig/MDEClientSpringConfig.xml"/>
+      <resource uri="~/SpringConfig/OEEClientSpringConfig.xml"/>
+      <resource uri="~/SpringConfig/MarketDataServiceSpringConfig.xml" />
+      <resource uri="~/SpringConfig/HistoricalDataServiceSpringConfig.xml" />
+      <resource uri="~/SpringConfig/OrderExecutionServiceSpringConfig.xml" />
       <resource uri="~/SpringConfig/BacktestingOrderExecutorConfig.xml" />
-      <resource uri="~/TradeHubConfig/SpringDao.xml" />
+      <resource uri="~/SpringConfig/SpringDao.xml" />
+      <resource uri="~/SpringConfig/MarketDataControllerSpringConfig.xml" />
     </context>
   </spring>
 
