--- a/TradeHubGui/TradeHubGui.csproj
+++ b/TradeHubGui/TradeHubGui.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Converters\InstanceExecutionStatusToVisibilityConverter.cs" />
     <Compile Include="Converters\InstanceExecutionStatusToBrushConverter.cs" />
     <Compile Include="Converters\SelectedProviderToVisibilityConverter.cs" />
+    <Compile Include="Converters\ServiceStatusToBrushConverter.cs" />
     <Compile Include="TemplateSelectors\CredentialsTemplateSelector.cs" />
     <Compile Include="TemplateSelectors\DataGridEndValuesTemplateSelector.cs" />
     <Compile Include="TemplateSelectors\DataGridIncrementValuesTemplateSelector.cs" />
@@ -154,6 +155,7 @@
     <Compile Include="ViewModel\DashboardViewModel.cs" />
     <Compile Include="ViewModel\GeneticOptimizationViewModel.cs" />
     <Compile Include="ViewModel\ProvidersViewModel.cs" />
+    <Compile Include="ViewModel\ServicesViewModel.cs" />
     <Compile Include="ViewModel\StrategyRunnerViewModel.cs" />
     <Compile Include="Views\BruteOptimizationWindow.xaml.cs">
       <DependentUpon>BruteOptimizationWindow.xaml</DependentUpon>
