--- a/TradeHubGui.Dashboard/TradeHubGui.Dashboard.csproj
+++ b/TradeHubGui.Dashboard/TradeHubGui.Dashboard.csproj
@@ -74,8 +74,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Managers\MarketDataManager.cs" />
+    <Compile Include="Managers\MarketDataProvidersManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\MarketDataController.cs" />
+    <Compile Include="Services\ProvidersController.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TradeHubGui.Common\TradeHubGui.Common.csproj">
