--- a/TradeHubGui.Dashboard/TradeHubGui.Dashboard.csproj
+++ b/TradeHubGui.Dashboard/TradeHubGui.Dashboard.csproj
@@ -22,7 +22,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
+    <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
@@ -75,6 +75,7 @@
   <ItemGroup>
     <Compile Include="Managers\MarketDataManager.cs" />
     <Compile Include="Managers\MarketDataProvidersManager.cs" />
+    <Compile Include="Managers\OrderExecutionProvidersManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\MarketDataController.cs" />
     <Compile Include="Services\ProvidersController.cs" />
