(TH-182) Order Execution application layer added along with test cases. Sample Order Execution provides data placed in the root directory.

--- a/TradeHubGui.Dashboard.Tests/TradeHubGui.Dashboard.Tests.csproj
+++ b/TradeHubGui.Dashboard.Tests/TradeHubGui.Dashboard.Tests.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Integration\MarketDataControllerTests.cs" />
+    <Compile Include="Integration\OrderExecutionControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
