--- a/TradeHubGui/App.config
+++ b/TradeHubGui/App.config
@@ -19,6 +19,7 @@
       <resource uri="~/SpringConfig/BacktestingOrderExecutorConfig.xml" />
       <resource uri="~/SpringConfig/SpringDao.xml" />
       <resource uri="~/SpringConfig/MarketDataControllerSpringConfig.xml" />
+      <resource uri="~/SpringConfig/OrderExecutionControllerSpringConfig.xml" />
     </context>
   </spring>
 
