--- a/TradeHubGui/TradeHubGui.csproj
+++ b/TradeHubGui/TradeHubGui.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Converters\InstanceExecutionStatusToVisibilityConverter.cs" />
     <Compile Include="Converters\InstanceExecutionStatusToBrushConverter.cs" />
     <Compile Include="Converters\SelectedProviderToVisibilityConverter.cs" />
+    <Compile Include="Converters\ServiceStatusToVisibilityConverter.cs" />
     <Compile Include="Converters\ServiceStatusToBrushConverter.cs" />
     <Compile Include="TemplateSelectors\CredentialsTemplateSelector.cs" />
     <Compile Include="TemplateSelectors\DataGridEndValuesTemplateSelector.cs" />
